add styles for header, body and link

--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -1,1 +1,21 @@
-
+html {
+    font-family: "Verdana", sans-serif;
+    font-size: 16px;
+        
+  }
+  * {
+    box-sizing: border-box;
+    
+  }
+  body {
+      background-color: black;
+  }
+header {
+    font-size: 50px;
+    color: white;
+    text-align: center;
+}
+a {
+    color: aquamarine;
+    text-decoration: underline;
+}
