--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -69,6 +69,6 @@ color: gray;
     color: gray;
     text-align: right;
   }
-  .far fa-copyright {
+  .fa-solid fa-copyright {
     color: gray; 
   }
